[gd_scene load_steps=11 format=3 uid="uid://coa2mfgcnskhv"]

[ext_resource type="Script" uid="uid://060h6c2u0284" path="res://godot/scripts/logs_menu.gd" id="1_kih0d"]
[ext_resource type="Texture2D" uid="uid://dq8xe0fpqsci1" path="res://assets/background.jpg" id="2_ld8to"]
[ext_resource type="FontFile" uid="uid://baevmlyk3no2d" path="res://assets/8bitlim.ttf" id="3_ke7n1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkq16"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wm0df"]
bg_color = Color(0.804743, 0.804743, 0.804743, 1)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 5
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xipyu"]
bg_color = Color(0.0295066, 0.0295066, 0.0295065, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fgv7v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0d5q"]
bg_color = Color(0.0295066, 0.0295066, 0.0295065, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndlwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nj70s"]
bg_color = Color(0.0295066, 0.0295066, 0.0295065, 1)

[node name="LogsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kih0d")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577, 322.5)
scale = Vector2(3.61006, 4.0566)
texture = ExtResource("2_ld8to")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

[node name="login_botton" type="Button" parent="TouchScreenButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 73.0
offset_top = 503.0
offset_right = 300.0
offset_bottom = 564.0
theme_override_fonts/font = ExtResource("3_ke7n1")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jkq16")
theme_override_styles/hover = SubResource("StyleBoxFlat_wm0df")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xipyu")
text = "LOGIN"

[node name="register_botton" type="Button" parent="TouchScreenButton"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.553
anchor_right = 0.5
anchor_bottom = 0.553
offset_left = 478.0
offset_top = 499.0
offset_right = 705.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("3_ke7n1")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fgv7v")
theme_override_styles/hover = SubResource("StyleBoxFlat_wm0df")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m0d5q")
text = "REGISTER"

[node name="offline_botton" type="Button" parent="TouchScreenButton"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.539
anchor_right = 0.5
anchor_bottom = 0.539
offset_left = 840.0
offset_top = 500.0
offset_right = 1067.0
offset_bottom = 561.0
theme_override_fonts/font = ExtResource("3_ke7n1")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ndlwy")
theme_override_styles/hover = SubResource("StyleBoxFlat_wm0df")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nj70s")
text = "OFFLINE"

[node name="tittle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.493
anchor_top = 0.387
anchor_right = 0.493
anchor_bottom = 0.387
offset_left = -355.936
offset_top = -121.776
offset_right = 373.064
offset_bottom = 185.224
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 17
theme_override_constants/paragraph_spacing = 14
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("3_ke7n1")
theme_override_font_sizes/font_size = 116
text = "CODE CLASH"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
max_lines_visible = 9

[connection signal="pressed" from="TouchScreenButton/login_botton" to="." method="_on_login_botton_pressed"]
[connection signal="pressed" from="TouchScreenButton/register_botton" to="." method="_on_register_botton_pressed"]
[connection signal="pressed" from="TouchScreenButton/offline_botton" to="." method="_on_offline_botton_pressed"]
